# LimitOrderBook

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  none
include/: MarketSimulator.hpp  Order.hpp  OrderBook.hpp  Trade.hpp
output/: market_simulation_results.csv
scripts/: analysis.R  analysis.Rmd  analysis.html  scripts.Rproj
src/: OrderBook.cpp  firstFile.cpp  main.cpp
